--- a/docs/two_d_game_ai/view/bot_renderer.html
+++ b/docs/two_d_game_ai/view/bot_renderer.html
@@ -73,9 +73,9 @@
 </span><span id="L-6"><a href="#L-6"><span class="linenos">  6</span></a>
 </span><span id="L-7"><a href="#L-7"><span class="linenos">  7</span></a><span class="kn">from</span> <span class="nn">pygame</span> <span class="kn">import</span> <span class="n">Vector2</span>
 </span><span id="L-8"><a href="#L-8"><span class="linenos">  8</span></a>
-</span><span id="L-9"><a href="#L-9"><span class="linenos">  9</span></a><span class="kn">from</span> <span class="nn">two_d_game_ai.entities</span> <span class="kn">import</span> <span class="n">Bot</span>
+</span><span id="L-9"><a href="#L-9"><span class="linenos">  9</span></a><span class="kn">from</span> <span class="nn">two_d_game_ai.entities.bot</span> <span class="kn">import</span> <span class="n">Bot</span>
 </span><span id="L-10"><a href="#L-10"><span class="linenos"> 10</span></a><span class="kn">from</span> <span class="nn">two_d_game_ai.view</span> <span class="kn">import</span> <span class="n">colors</span>
-</span><span id="L-11"><a href="#L-11"><span class="linenos"> 11</span></a><span class="kn">from</span> <span class="nn">two_d_game_ai.view.generic_entity_renderer</span> <span class="kn">import</span> <span class="n">_GenericEntityRenderer</span>
+</span><span id="L-11"><a href="#L-11"><span class="linenos"> 11</span></a><span class="kn">from</span> <span class="nn">two_d_game_ai.view.generic_entity_renderer</span> <span class="kn">import</span> <span class="n">GenericEntityRenderer</span>
 </span><span id="L-12"><a href="#L-12"><span class="linenos"> 12</span></a><span class="kn">from</span> <span class="nn">two_d_game_ai.view.primitives</span> <span class="kn">import</span> <span class="p">(</span>
 </span><span id="L-13"><a href="#L-13"><span class="linenos"> 13</span></a>    <span class="n">draw_scaled_circle</span><span class="p">,</span>
 </span><span id="L-14"><a href="#L-14"><span class="linenos"> 14</span></a>    <span class="n">draw_scaled_circular_arc</span><span class="p">,</span>
@@ -86,7 +86,7 @@
 </span><span id="L-19"><a href="#L-19"><span class="linenos"> 19</span></a>    <span class="kn">from</span> <span class="nn">pygame</span> <span class="kn">import</span> <span class="n">Color</span>
 </span><span id="L-20"><a href="#L-20"><span class="linenos"> 20</span></a>
 </span><span id="L-21"><a href="#L-21"><span class="linenos"> 21</span></a>
-</span><span id="L-22"><a href="#L-22"><span class="linenos"> 22</span></a><span class="k">class</span> <span class="nc">BotRenderer</span><span class="p">(</span><span class="n">_GenericEntityRenderer</span><span class="p">):</span>
+</span><span id="L-22"><a href="#L-22"><span class="linenos"> 22</span></a><span class="k">class</span> <span class="nc">BotRenderer</span><span class="p">(</span><span class="n">GenericEntityRenderer</span><span class="p">):</span>
 </span><span id="L-23"><a href="#L-23"><span class="linenos"> 23</span></a><span class="w">    </span><span class="sd">&quot;&quot;&quot;Renders a Bot to a Surface.&quot;&quot;&quot;</span>
 </span><span id="L-24"><a href="#L-24"><span class="linenos"> 24</span></a>
 </span><span id="L-25"><a href="#L-25"><span class="linenos"> 25</span></a>    <span class="n">ICON_RADIUS</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="mi">10</span>
@@ -232,13 +232,13 @@
 <div class="attr class">
             
     <span class="def">class</span>
-    <span class="name">BotRenderer</span><wbr>(<span class="base"><a href="generic_entity_renderer.html#_GenericEntityRenderer">two_d_game_ai.view.generic_entity_renderer._GenericEntityRenderer</a></span>):
+    <span class="name">BotRenderer</span><wbr>(<span class="base"><a href="generic_entity_renderer.html#GenericEntityRenderer">two_d_game_ai.view.generic_entity_renderer.GenericEntityRenderer</a></span>):
 
                 <label class="view-source-button" for="BotRenderer-view-source"><span>View Source</span></label>
 
     </div>
     <a class="headerlink" href="#BotRenderer"></a>
-            <div class="pdoc-code codehilite"><pre><span></span><span id="BotRenderer-23"><a href="#BotRenderer-23"><span class="linenos"> 23</span></a><span class="k">class</span> <span class="nc">BotRenderer</span><span class="p">(</span><span class="n">_GenericEntityRenderer</span><span class="p">):</span>
+            <div class="pdoc-code codehilite"><pre><span></span><span id="BotRenderer-23"><a href="#BotRenderer-23"><span class="linenos"> 23</span></a><span class="k">class</span> <span class="nc">BotRenderer</span><span class="p">(</span><span class="n">GenericEntityRenderer</span><span class="p">):</span>
 </span><span id="BotRenderer-24"><a href="#BotRenderer-24"><span class="linenos"> 24</span></a><span class="w">    </span><span class="sd">&quot;&quot;&quot;Renders a Bot to a Surface.&quot;&quot;&quot;</span>
 </span><span id="BotRenderer-25"><a href="#BotRenderer-25"><span class="linenos"> 25</span></a>
 </span><span id="BotRenderer-26"><a href="#BotRenderer-26"><span class="linenos"> 26</span></a>    <span class="n">ICON_RADIUS</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="mi">10</span>
@@ -431,15 +431,15 @@
                             <div class="inherited">
                                 <h5>Inherited Members</h5>
                                 <dl>
-                                    <div><dt><a href="generic_entity_renderer.html#_GenericEntityRenderer">two_d_game_ai.view.generic_entity_renderer._GenericEntityRenderer</a></dt>
-                                <dd id="BotRenderer.__init__" class="function"><a href="generic_entity_renderer.html#_GenericEntityRenderer.__init__">_GenericEntityRenderer</a></dd>
-                <dd id="BotRenderer.LABEL_OFFSET" class="variable"><a href="generic_entity_renderer.html#_GenericEntityRenderer.LABEL_OFFSET">LABEL_OFFSET</a></dd>
-                <dd id="BotRenderer.view" class="variable"><a href="generic_entity_renderer.html#_GenericEntityRenderer.view">view</a></dd>
-                <dd id="BotRenderer.entity" class="variable"><a href="generic_entity_renderer.html#_GenericEntityRenderer.entity">entity</a></dd>
-                <dd id="BotRenderer.font" class="variable"><a href="generic_entity_renderer.html#_GenericEntityRenderer.font">font</a></dd>
-                <dd id="BotRenderer.is_selected" class="variable"><a href="generic_entity_renderer.html#_GenericEntityRenderer.is_selected">is_selected</a></dd>
-                <dd id="BotRenderer.clickable_radius" class="variable"><a href="generic_entity_renderer.html#_GenericEntityRenderer.clickable_radius">clickable_radius</a></dd>
-                <dd id="BotRenderer.is_clicked" class="function"><a href="generic_entity_renderer.html#_GenericEntityRenderer.is_clicked">is_clicked</a></dd>
+                                    <div><dt><a href="generic_entity_renderer.html#GenericEntityRenderer">two_d_game_ai.view.generic_entity_renderer.GenericEntityRenderer</a></dt>
+                                <dd id="BotRenderer.__init__" class="function"><a href="generic_entity_renderer.html#GenericEntityRenderer.__init__">GenericEntityRenderer</a></dd>
+                <dd id="BotRenderer.LABEL_OFFSET" class="variable"><a href="generic_entity_renderer.html#GenericEntityRenderer.LABEL_OFFSET">LABEL_OFFSET</a></dd>
+                <dd id="BotRenderer.view" class="variable"><a href="generic_entity_renderer.html#GenericEntityRenderer.view">view</a></dd>
+                <dd id="BotRenderer.entity" class="variable"><a href="generic_entity_renderer.html#GenericEntityRenderer.entity">entity</a></dd>
+                <dd id="BotRenderer.font" class="variable"><a href="generic_entity_renderer.html#GenericEntityRenderer.font">font</a></dd>
+                <dd id="BotRenderer.is_selected" class="variable"><a href="generic_entity_renderer.html#GenericEntityRenderer.is_selected">is_selected</a></dd>
+                <dd id="BotRenderer.clickable_radius" class="variable"><a href="generic_entity_renderer.html#GenericEntityRenderer.clickable_radius">clickable_radius</a></dd>
+                <dd id="BotRenderer.is_clicked" class="function"><a href="generic_entity_renderer.html#GenericEntityRenderer.is_clicked">is_clicked</a></dd>
 
             </div>
                                 </dl>
