--- a/docs/two_d_game_ai/view/colors.html
+++ b/docs/two_d_game_ai/view/colors.html
@@ -91,14 +91,14 @@
                     <h1 class="modulename">
 <a href="./../../two_d_game_ai.html">two_d_game_ai</a><wbr>.<a href="./../view.html">view</a><wbr>.colors    </h1>
 
-                        <div class="docstring"><p>Module containing colour definitions.</p>
+                        <div class="docstring"><p>Contains colour definitions.</p>
 </div>
 
                         <input id="mod-colors-view-source" class="view-source-toggle-state" type="checkbox" aria-hidden="true" tabindex="-1">
 
                         <label class="view-source-button" for="mod-colors-view-source"><span>View Source</span></label>
 
-                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="sd">&quot;&quot;&quot;Module containing colour definitions.&quot;&quot;&quot;</span>
+                        <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="sd">&quot;&quot;&quot;Contains colour definitions.&quot;&quot;&quot;</span>
 </span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a>
 </span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a><span class="kn">from</span><span class="w"> </span><span class="nn">pygame</span><span class="w"> </span><span class="kn">import</span> <span class="n">Color</span>
 </span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a>
@@ -131,11 +131,11 @@
             <span class="name">WINDOW_FILL</span>        =
 <span class="default_value">Color(26, 26, 26, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#WINDOW_FILL"></a>
-    
-    
+
+
 
                 </section>
                 <section id="WINDOW_TEXT">
@@ -143,11 +143,11 @@
             <span class="name">WINDOW_TEXT</span>        =
 <span class="default_value">Color(204, 204, 204, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#WINDOW_TEXT"></a>
-    
-    
+
+
 
                 </section>
                 <section id="WORLD_FILL">
@@ -155,11 +155,11 @@
             <span class="name">WORLD_FILL</span>        =
 <span class="default_value">Color(38, 38, 38, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#WORLD_FILL"></a>
-    
-    
+
+
 
                 </section>
                 <section id="WORLD_AXES_LINE">
@@ -167,11 +167,11 @@
             <span class="name">WORLD_AXES_LINE</span>        =
 <span class="default_value">Color(89, 89, 89, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#WORLD_AXES_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="WORLD_GRID_LINE">
@@ -179,11 +179,11 @@
             <span class="name">WORLD_GRID_LINE</span>        =
 <span class="default_value">Color(64, 64, 64, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#WORLD_GRID_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="MOVEMENT_BLOCK_FILL">
@@ -191,11 +191,11 @@
             <span class="name">MOVEMENT_BLOCK_FILL</span>        =
 <span class="default_value">Color(26, 26, 26, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#MOVEMENT_BLOCK_FILL"></a>
-    
-    
+
+
 
                 </section>
                 <section id="MOVEMENT_BLOCK_LINE">
@@ -203,11 +203,11 @@
             <span class="name">MOVEMENT_BLOCK_LINE</span>        =
 <span class="default_value">Color(0, 0, 0, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#MOVEMENT_BLOCK_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="BOT_FILL">
@@ -215,11 +215,11 @@
             <span class="name">BOT_FILL</span>        =
 <span class="default_value">Color(255, 255, 255, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#BOT_FILL"></a>
-    
-    
+
+
 
                 </section>
                 <section id="BOT_HEADING_INDICATOR_LINE">
@@ -227,11 +227,11 @@
             <span class="name">BOT_HEADING_INDICATOR_LINE</span>        =
 <span class="default_value">Color(26, 26, 26, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#BOT_HEADING_INDICATOR_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="BOT_DESTINATION_LINE">
@@ -239,11 +239,11 @@
             <span class="name">BOT_DESTINATION_LINE</span>        =
 <span class="default_value">Color(255, 255, 255, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#BOT_DESTINATION_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="BOT_ROUTE_LINE">
@@ -251,11 +251,11 @@
             <span class="name">BOT_ROUTE_LINE</span>        =
 <span class="default_value">Color(255, 165, 0, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#BOT_ROUTE_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="BOT_CAN_SEE_LINE">
@@ -263,11 +263,11 @@
             <span class="name">BOT_CAN_SEE_LINE</span>        =
 <span class="default_value">Color(0, 238, 0, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#BOT_CAN_SEE_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="BOT_KNOWS_LINE">
@@ -275,11 +275,11 @@
             <span class="name">BOT_KNOWS_LINE</span>        =
 <span class="default_value">Color(30, 144, 255, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#BOT_KNOWS_LINE"></a>
-    
-    
+
+
 
                 </section>
                 <section id="SELECTED_FILL">
@@ -287,11 +287,11 @@
             <span class="name">SELECTED_FILL</span>        =
 <span class="default_value">Color(255, 255, 0, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#SELECTED_FILL"></a>
-    
-    
+
+
 
                 </section>
                 <section id="DEBUG">
@@ -299,11 +299,11 @@
             <span class="name">DEBUG</span>        =
 <span class="default_value">Color(255, 0, 255, 255)</span>
 
-        
+
     </div>
     <a class="headerlink" href="#DEBUG"></a>
-    
-    
+
+
 
                 </section>
     </main>
